Inclusão módulo usuário

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5,7 +5,7 @@ a:hover {
     font-family: 'Lato', sans-serif;
     text-align: center;
     font-size: 4em;
-    color: #B63132;
+    color: #0fbc7d;
     margin: 26px 0;
 }
 .pricingTable{
@@ -20,7 +20,7 @@ a:hover {
     border-radius: 0 70px 0 0;
 }
 .pricingTable .title{
-    color: #B63132;
+    color: #0fbc7d;
     font-size: 27px;
     font-weight: 800;
     text-transform: uppercase;
@@ -28,12 +28,12 @@ a:hover {
     margin: 0 0 15px;
 }
 .pricingTable .inner-content{
-    background: linear-gradient(to bottom, #de2426, #773b3b);
+    background: linear-gradient(to bottom, #04ce4e, #0fbc7d);
     padding: 30px 0 15px;
     border-radius: 0 70px 0 0;
 }
 .pricingTable .price-value{
-    color: #B63132;
+    color: #0fbc7d;
     background-color: transparent;
     font-size: 45px;
     line-height: 40px;
@@ -104,7 +104,7 @@ a:hover {
     clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 .pricingTable .pricingTable-signup{
-    background: linear-gradient(to bottom, #de2426, #773b3b);
+    background: linear-gradient(to bottom, #04ce4e, #0fbc7d);
     padding: 10px 0;
     border-radius:0 0 0 50px;
     border: 9px solid #fff;
